feat: Fix k-batched gdp method & Present batch size ablation subsection

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -390,7 +390,6 @@
     "@torch.no_grad()\n",
     "def program_weights_gdp2(\n",
     "    self,\n",
-    "    from_reference: bool = True,\n",
     "    batch_size: int = 5,\n",
     "    learning_rate: float = 1,\n",
     "    max_iter: int = 100,\n",
@@ -402,9 +401,7 @@
     "\n",
     "    Variable batch version of the `program_weights_gdp` method.\n",
     "    \"\"\"\n",
-    "    if not from_reference or self.reference_combined_weights is None:\n",
-    "        self.reference_combined_weights = self.tile.get_weights()\n",
-    "        target_weights = self.reference_combined_weights\n",
+    "    target_weights = self.tile.get_weights()\n",
     "\n",
     "    input_size = self.tile.get_x_size()\n",
     "    x_values = torch.eye(input_size)\n",
@@ -421,18 +418,22 @@
     "    self.tile.set_learning_rate(learning_rate)  # type: ignore\n",
     "\n",
     "    for i in range(max_iter):\n",
-    "        x = x_values[i * batch_size : (i + 1) * batch_size]\n",
+    "        start_idx = i * batch_size\n",
+    "        end_idx = (i + 1) * batch_size\n",
+    "\n",
+    "        if end_idx > len(x_values):\n",
+    "            # Calculate how much we exceed the length\n",
+    "            exceed_length = end_idx - len(x_values)\n",
+    "\n",
+    "            # Slice the arrays and concatenate the exceeded part from the beginning\n",
+    "            x = torch.concatenate((x_values[start_idx:], x_values[:exceed_length]))\n",
+    "            target = torch.concatenate((target_values[start_idx:], target_values[:exceed_length]))\n",
+    "        else:\n",
+    "            x = x_values[start_idx:end_idx]\n",
+    "            target = target_values[start_idx:end_idx]\n",
+    "\n",
     "        y = self.tile.forward(x, False)\n",
-    "        # TODO: error와 weight 2norm 사이 관계 분석\n",
-    "        error = y - target_values[i * batch_size : (i + 1) * batch_size]\n",
-    "\n",
-    "        # Check if the index exceeds the input size\n",
-    "        if (i + 1) * batch_size > input_size:\n",
-    "            x_overlap = x_values[: (i + 1) * batch_size % input_size]\n",
-    "            y_overlap = self.tile.forward(x_overlap, False)\n",
-    "            error_overlap = y_overlap - target_values[: (i + 1) * batch_size % input_size]\n",
-    "            error[: len(error_overlap)] += error_overlap\n",
-    "\n",
+    "        error = y - target\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
     "        mtx_diff = self.tile.get_weights() - target_weights\n",
     "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=2)\n",
@@ -473,7 +474,6 @@
     "@torch.no_grad()\n",
     "def program_weights_svd(\n",
     "    self,\n",
-    "    from_reference: bool = True,\n",
     "    max_iter: int = 100,\n",
     "    tolerance: Optional[float] = 0.01,\n",
     "    w_init: Union[float, Tensor] = 0.0,\n",
@@ -496,10 +496,7 @@
     "    Returns:\n",
     "        None\n",
     "    \"\"\"\n",
-    "\n",
-    "    if not from_reference or self.reference_combined_weights is None:\n",
-    "        self.reference_combined_weights = self.tile.get_weights()\n",
-    "        target_weights = self.reference_combined_weights\n",
+    "    target_weights = self.tile.get_weights()\n",
     "\n",
     "    if isinstance(w_init, Tensor):\n",
     "        self.tile.set_weights(w_init)\n",
@@ -536,8 +533,7 @@
     "        # TODO: self.get_weights()\n",
     "        diff = self.tile.get_weights() - target_weights\n",
     "        U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
-    "        # l2_norm = torch.linalg.matrix_norm(diff, ord=2)\n",
-    "        l2_norm = S[i]  # equivalent to above\n",
+    "        l2_norm = torch.linalg.matrix_norm(diff, ord=2) if svd_once else S[i]\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
     "        # y = self.tile.forward(x_values, False)\n",
     "        # # TODO: error와 weight 2norm 사이 관계 분석\n",
@@ -599,11 +595,12 @@
    "source": [
     "import torch\n",
     "\n",
-    "input_size = 1000\n",
-    "output_size = 500\n",
+    "input_size = 500\n",
+    "output_size = 300\n",
+    "batch_size = 5\n",
     "\n",
     "# generate low rank matrix\n",
-    "rank = 100\n",
+    "rank = 20\n",
     "u, s, v = torch.svd(torch.randn(input_size, output_size))\n",
     "w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))"
    ]
@@ -632,8 +629,8 @@
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "device_cfg = ConstantStepDevice(diffusion=0)\n",
-    "# device_cfg = IdealDevice()\n",
+    "# device_cfg = ConstantStepDevice(diffusion=0)\n",
+    "device_cfg = IdealDevice()\n",
     "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "# rpuconfig = SingleRPUConfig()\n",
@@ -664,8 +661,9 @@
    "outputs": [],
    "source": [
     "with LogCapture() as logc:\n",
-    "    atile.set_weights(weight=w, realistic=True)\n",
-    "    log_list = logc.get_log_list()"
+    "    atile.tile.set_weights(w.T)\n",
+    "    atile.program_weights(batch_size=batch_size, tolerance=1e-5)\n",
+    "    log_list1 = logc.get_log_list()"
    ]
   },
   {
@@ -675,7 +673,9 @@
    "outputs": [],
    "source": [
     "with LogCapture() as logc:\n",
-    "    atile2.set_weights(weight=w, realistic=True)\n",
+    "    # atile2.set_weights(weight=w, realistic=True)\n",
+    "    atile2.tile.set_weights(w.T)\n",
+    "    atile2.program_weights()\n",
     "    log_list2 = logc.get_log_list()"
    ]
   },
@@ -687,16 +687,47 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "err_list = extract_error(log_list)\n",
+    "err_list = extract_error(log_list1)\n",
     "err_list2 = extract_error(log_list2)\n",
     "plt.semilogy(err_list)\n",
     "plt.semilogy(err_list2)\n",
     "# set legend\n",
-    "plt.legend([\"gdp-sequential(batchsize 5)\", \"svd\"])\n",
+    "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"L2 norm of weight error (largest singular value)\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GDP batch-size effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for batch_size in [1, 5, 10, 20, 50]:\n",
+    "    with LogCapture() as logc:\n",
+    "        atile.tile.set_weights(w.T)\n",
+    "        atile.program_weights(batch_size=batch_size)\n",
+    "        log_list = logc.get_log_list()\n",
+    "    err_list = extract_error(log_list)\n",
+    "    num_iter = len(err_list)\n",
+    "    plt.semilogy(err_list, label=f\"batch_size={batch_size}\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"Iteration\")\n",
+    "plt.ylabel(\"L2 norm of weight error\")\n",
+    "plt.title(\n",
+    "    \"{}x{} rank={} matrix with {}\".format(\n",
+    "        input_size, output_size, rank, atile.rpu_config.device.__class__.__name__\n",
+    "    )\n",
+    ")"
    ]
   },
   {
