chore: Fix log metric error, Move halfselection Tiles, and Rename directory

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -4,283 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Primitive update method"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from aihwkit.exceptions import TorchTileConfigError\n",
-    "from aihwkit.simulator.configs import TorchInferenceRPUConfig\n",
-    "from aihwkit.simulator.parameters.enums import WeightClipType\n",
-    "from aihwkit.simulator.parameters.inference import WeightClipParameter, WeightModifierParameter\n",
-    "from aihwkit.simulator.tiles.custom import CustomSimulatorTile\n",
-    "from torch import Tensor\n",
-    "\n",
-    "# TODO: 아래 메서드들 구현 필요\n",
-    "# aihwkit의 PulseType(aihwkit.simulator.parameters.enums.PulseType)들과 연동해서 구현.\n",
-    "# PCM inference noise 모델 등등 추가해보기\n",
-    "\n",
-    "# Note: SimulaterTile.forward() 말고 AnalogNVM의 matmul에다가 구현해도 됨\n",
-    "# AnalogMVM.matmul()\n",
-    "# -> SimulatorTile.forward()\n",
-    "# -> PeripheryTile.joint_forward()\n",
-    "# -> AnalogFunction.forward()\n",
-    "# -> CustomTile.forward()\n",
-    "# -> PeripheryTile.read_weights()/program_weights()\n",
-    "# -> PeripheryTile.get_weights/set_weights(realistic=True) 에 쓰임\n",
-    "\n",
-    "\n",
-    "class _HalfSelectMixin:\n",
-    "    \"\"\"Implements the half-selected update method.\"\"\"\n",
-    "\n",
-    "    def half_selection(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "class HalfSelectedSimulatorTile(_HalfSelectMixin, CustomSimulatorTile):\n",
-    "\n",
-    "    def set_weights(self, weight: Tensor, **kwargs) -> None:\n",
-    "        \"\"\"Set the tile weights.\n",
-    "\n",
-    "        Args:\n",
-    "            weight: ``[out_size, in_size]`` weight matrix.\n",
-    "        \"\"\"\n",
-    "        super().set_weights(weight, **kwargs)\n",
-    "\n",
-    "    def get_weights(self) -> Tensor:\n",
-    "        \"\"\"Get the tile weights.\n",
-    "\n",
-    "        Returns:\n",
-    "            a tuple where the first item is the ``[out_size, in_size]`` weight\n",
-    "            matrix; and the second item is either the ``[out_size]`` bias vector\n",
-    "            or ``None`` if the tile is set not to use bias.\n",
-    "        \"\"\"\n",
-    "        super().get_weights()\n",
-    "\n",
-    "    def update(\n",
-    "        self,\n",
-    "        x_input: Tensor,\n",
-    "        d_input: Tensor,\n",
-    "        bias: bool = False,\n",
-    "        in_trans: bool = False,\n",
-    "        out_trans: bool = False,\n",
-    "        non_blocking: bool = False,\n",
-    "    ) -> Tensor:\n",
-    "        \"\"\"Implements rank-1 tile update with gradient noise\n",
-    "        (e.g. using pulse trains).\n",
-    "\n",
-    "        Note:\n",
-    "            Ignores additional arguments\n",
-    "\n",
-    "        Raises:\n",
-    "            TileError: in case transposed input / output or bias is requested\n",
-    "        \"\"\"\n",
-    "        super().update(x_input, d_input, bias, in_trans, out_trans, non_blocking)\n",
-    "        self.half_selection()\n",
-    "\n",
-    "    def forward(\n",
-    "        self,\n",
-    "        x_input: Tensor,\n",
-    "        bias: bool = False,\n",
-    "        in_trans: bool = False,\n",
-    "        out_trans: bool = False,\n",
-    "        is_test: bool = False,\n",
-    "        non_blocking: bool = False,\n",
-    "    ) -> Tensor:\n",
-    "        if not is_test:\n",
-    "            noisy_weights = HalfSelectedSimulatorTile.modify_weight(\n",
-    "                self.weight, self._modifier, x_input.shape[0]\n",
-    "            )\n",
-    "        else:\n",
-    "            noisy_weights = self.weight\n",
-    "\n",
-    "        ...\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def modify_weight(inp_weight: Tensor, modifier: WeightModifierParameter, batch_size: int):\n",
-    "        pass\n",
-    "\n",
-    "    def set_config(self, rpu_config: \"TorchInferenceRPUConfig\") -> None:\n",
-    "        \"\"\"Updated the configuration to allow on-the-fly changes.\n",
-    "\n",
-    "        Args:\n",
-    "            rpu_config: configuration to use in the next forward passes.\n",
-    "        \"\"\"\n",
-    "        self._f_io = rpu_config.forward\n",
-    "        self._modifier = rpu_config.modifier\n",
-    "\n",
-    "    @torch.no_grad()\n",
-    "    def clip_weights(self, clip: WeightClipParameter) -> None:\n",
-    "        \"\"\"Clip the weights. Called by InferenceTileWithperiphery.post_update_step()\n",
-    "\n",
-    "        Args:\n",
-    "            clip: parameters specifying the clipping methof and type.\n",
-    "\n",
-    "        Raises:\n",
-    "            NotImplementedError: For unsupported WeightClipTypes\n",
-    "            ConfigError: If unknown WeightClipType used.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        if clip.type == WeightClipType.FIXED_VALUE:\n",
-    "            self.weight.data = torch.clamp(self.weight, -clip.fixed_value, clip.fixed_value)\n",
-    "        elif clip.type == WeightClipType.LAYER_GAUSSIAN:\n",
-    "            alpha = self.weight.std() * clip.sigma\n",
-    "            if clip.fixed_value > 0:\n",
-    "                alpha = min(clip.fixed_value, alpha)\n",
-    "            self.weight.data = torch.clamp(self.weight, -alpha, alpha)\n",
-    "\n",
-    "        elif clip.type == WeightClipType.AVERAGE_CHANNEL_MAX:\n",
-    "            raise NotImplementedError\n",
-    "        else:\n",
-    "            raise TorchTileConfigError(f\"Unknown clip type {clip.type}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## CustomTile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Any, Callable, Optional, Tuple, Type\n",
-    "\n",
-    "from aihwkit.exceptions import AnalogBiasConfigError, TileError\n",
-    "from aihwkit.simulator.tiles.base import SimulatorTile, SimulatorTileWrapper\n",
-    "from aihwkit.simulator.tiles.custom import CustomRPUConfig\n",
-    "from aihwkit.simulator.tiles.functions import AnalogFunction\n",
-    "from aihwkit.simulator.tiles.inference import InferenceTileWithPeriphery\n",
-    "from aihwkit.simulator.tiles.module import TileModule\n",
-    "\n",
-    "\n",
-    "class RealisticTile(TileModule, InferenceTileWithPeriphery, SimulatorTileWrapper):\n",
-    "    \"\"\"_summary_\n",
-    "\n",
-    "    Note) methods in below are from CustomTile\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        out_size: int,\n",
-    "        in_size: int,\n",
-    "        rpu_config: Optional[\"RPUConfigwithProgram\"],\n",
-    "        bias: bool = False,\n",
-    "        in_trans: bool = False,\n",
-    "        out_trans: bool = False,\n",
-    "    ):\n",
-    "        if in_trans or out_trans:\n",
-    "            raise TileError(\"in/out trans is not supported.\")\n",
-    "\n",
-    "        if not rpu_config:\n",
-    "            rpu_config = CustomRPUConfig()\n",
-    "\n",
-    "        TileModule.__init__(self)\n",
-    "        SimulatorTileWrapper.__init__(\n",
-    "            self,\n",
-    "            out_size,\n",
-    "            in_size,\n",
-    "            rpu_config,  # type: ignore\n",
-    "            bias,\n",
-    "            in_trans,\n",
-    "            out_trans,\n",
-    "            torch_update=True,\n",
-    "        )\n",
-    "        InferenceTileWithPeriphery.__init__(self)\n",
-    "\n",
-    "        if self.analog_bias:\n",
-    "            raise AnalogBiasConfigError(\"Analog bias is not supported for the torch tile\")\n",
-    "        # dynamically add the program_weights method\n",
-    "        self.program_weights = rpu_config.program_weights.__get__(self, RealisticTile)\n",
-    "\n",
-    "    def _create_simulator_tile(  # type: ignore\n",
-    "        self, x_size: int, d_size: int, rpu_config: \"CustomRPUConfig\"\n",
-    "    ) -> \"SimulatorTile\":\n",
-    "        \"\"\"Create a simulator tile.\n",
-    "\n",
-    "        Args:\n",
-    "            weight: 2D weight\n",
-    "            rpu_config: resistive processing unit configuration\n",
-    "\n",
-    "        Returns:\n",
-    "            a simulator tile based on the specified configuration.\n",
-    "        \"\"\"\n",
-    "        return rpu_config.simulator_tile_class(x_size=x_size, d_size=d_size, rpu_config=rpu_config)\n",
-    "\n",
-    "    def forward(\n",
-    "        self, x_input: Tensor, tensor_view: Optional[Tuple] = None  # type: ignore\n",
-    "    ) -> Tensor:\n",
-    "        \"\"\"Torch forward function that calls the analog context forward\"\"\"\n",
-    "        # pylint: disable=arguments-differ\n",
-    "\n",
-    "        # to enable on-the-fly changes. However, with caution: might\n",
-    "        # change rpu config for backward / update while doing another forward.\n",
-    "        self.tile.set_config(self.rpu_config)\n",
-    "\n",
-    "        out = AnalogFunction.apply(\n",
-    "            self.get_analog_ctx(), self, x_input, self.shared_weights, not self.training\n",
-    "        )\n",
-    "\n",
-    "        if tensor_view is None:\n",
-    "            tensor_view = self.get_tensor_view(out.dim())\n",
-    "        out = self.apply_out_scaling(out, tensor_view)\n",
-    "\n",
-    "        if self.digital_bias:\n",
-    "            return out + self.bias.view(*tensor_view)\n",
-    "        return out"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## RPUConfig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: dataclass에 직접 program_weights 메서드 붙여넣기?\n",
-    "from dataclasses import dataclass, field\n",
-    "\n",
-    "\n",
-    "@dataclass\n",
-    "class RPUConfigwithProgram(CustomRPUConfig):\n",
-    "    \"\"\"Custom single RPU configuration.\"\"\"\n",
-    "\n",
-    "    program_weights: Callable[[Any], None] = None\n",
-    "    \"\"\"Method to program the weights.\"\"\"\n",
-    "\n",
-    "    tile_class: Type = RealisticTile\n",
-    "    \"\"\"Tile class that corresponds to this RPUConfig.\"\"\"\n",
-    "\n",
-    "    simulator_tile_class: Type = HalfSelectedSimulatorTile\n",
-    "    \"\"\"Simulator tile class implementing the analog forward / backward / update.\"\"\"\n",
-    "\n",
-    "    clip: WeightClipParameter = field(\n",
-    "        default_factory=lambda: WeightClipParameter(\n",
-    "            type=WeightClipType.FIXED_VALUE, fixed_value=1.0\n",
-    "        )\n",
-    "    )\n",
-    "    modifier: WeightModifierParameter = field(default_factory=WeightModifierParameter)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Program Methods"
    ]
   },
@@ -297,13 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Optional, Union\n",
+    "from typing import Any, Optional, Union\n",
     "\n",
+    "import torch\n",
     "from torch import Tensor\n",
     "\n",
     "from src.utils.pylogger import RankedLogger\n",
     "\n",
-    "log = RankedLogger()\n",
+    "log = RankedLogger(rank_zero_only=True)\n",
     "\n",
     "# TODO: realistic한가?\n",
     "\n",
@@ -368,7 +92,7 @@
     "        error = y - target_values\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
     "        mtx_diff = self.tile.get_weights() - target_weights\n",
-    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=2)\n",
+    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=\"nuc\")\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
     "        # log.debug(f\"Error: {err_normalized}\")\n",
     "        if tolerance is not None and err_normalized < tolerance:\n",
@@ -436,7 +160,7 @@
     "        error = y - target\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
     "        mtx_diff = self.tile.get_weights() - target_weights\n",
-    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=2)\n",
+    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=\"nuc\")\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
     "        # log.debug(f\"Error: {err_normalized}\")\n",
     "        if tolerance is not None and err_normalized < tolerance:\n",
@@ -519,7 +243,7 @@
     "\n",
     "    rank = torch.sum(S > rank_atol).item()\n",
     "    i = 0\n",
-    "    for _ in range(min(max_iter, rank)):\n",
+    "    for _ in range(min(max_iter, rank) * 3):\n",
     "        u = U[:, i]\n",
     "        v = Vh[i, :]\n",
     "        # uv_ratio = torch.sqrt(u/v)\n",
@@ -533,7 +257,7 @@
     "        # TODO: self.get_weights()\n",
     "        diff = self.tile.get_weights() - target_weights\n",
     "        U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
-    "        l2_norm = torch.linalg.matrix_norm(diff, ord=2) if svd_once else S[i]\n",
+    "        l2_norm = S.sum() if svd_once else torch.linalg.matrix_norm(diff, ord=\"nuc\")\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
     "        # y = self.tile.forward(x_values, False)\n",
     "        # # TODO: error와 weight 2norm 사이 관계 분석\n",
@@ -593,10 +317,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "\n",
+    "def plot_singular_values(Ws: tuple[torch.Tensor]):\n",
+    "    for w in Ws:\n",
+    "        s = torch.linalg.svdvals(w)\n",
+    "        plt.plot(s)\n",
+    "    plt.yscale(\"log\")\n",
+    "    plt.xlabel(\"Singular Value Index\")\n",
+    "    plt.ylabel(\"Singular Value\")\n",
+    "    plt.title(\"Singular Values of Weight Matrix\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "\n",
-    "input_size = 500\n",
-    "output_size = 300\n",
+    "input_size = 100\n",
+    "output_size = 50\n",
     "batch_size = 5\n",
     "\n",
     "# generate low rank matrix\n",
@@ -619,21 +363,30 @@
    "outputs": [],
    "source": [
     "from aihwkit.simulator.configs import SingleRPUConfig\n",
-    "from aihwkit.simulator.configs.devices import ConstantStepDevice, DriftParameter, IdealDevice\n",
+    "from aihwkit.simulator.configs.devices import (\n",
+    "    ConstantStepDevice,\n",
+    "    DriftParameter,\n",
+    "    ExpStepDevice,\n",
+    "    IdealDevice,\n",
+    ")\n",
     "from aihwkit.simulator.configs.utils import (\n",
     "    InputRangeParameter,\n",
     "    PrePostProcessingParameter,\n",
     "    UpdateParameters,\n",
     ")\n",
     "from aihwkit.simulator.parameters.enums import PulseType\n",
+    "from aihwkit.simulator.presets.configs import IdealizedPreset, PCMPreset\n",
+    "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "# device_cfg = ConstantStepDevice(diffusion=0)\n",
-    "device_cfg = IdealDevice()\n",
+    "# device_cfg = ExpStepDevice()\n",
+    "# device_cfg = IdealDevice()\n",
+    "device_cfg = IdealizedPresetDevice()\n",
     "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "# rpuconfig = SingleRPUConfig()\n",
+    "# rpuconfig = IdealizedPreset()\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
@@ -662,7 +415,7 @@
    "source": [
     "with LogCapture() as logc:\n",
     "    atile.tile.set_weights(w.T)\n",
-    "    atile.program_weights(batch_size=batch_size, tolerance=1e-5)\n",
+    "    atile.program_weights(batch_size=batch_size, tolerance=1e-5, max_iter=300)\n",
     "    log_list1 = logc.get_log_list()"
    ]
   },
@@ -675,7 +428,7 @@
     "with LogCapture() as logc:\n",
     "    # atile2.set_weights(weight=w, realistic=True)\n",
     "    atile2.tile.set_weights(w.T)\n",
-    "    atile2.program_weights()\n",
+    "    atile2.program_weights(max_iter=300, tolerance=1e-5)\n",
     "    log_list2 = logc.get_log_list()"
    ]
   },
@@ -685,16 +438,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "err_list = extract_error(log_list1)\n",
+    "W = (atile.tile.get_weights() - w.T, atile2.tile.get_weights() - w.T)\n",
+    "plot_singular_values(W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "    f\" nulcear norm of atile: {torch.linalg.matrix_norm(W[0], ord='nuc')}, atile2: {torch.linalg.matrix_norm(W[1], ord='nuc')}\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err_list1 = extract_error(log_list1)\n",
     "err_list2 = extract_error(log_list2)\n",
-    "plt.semilogy(err_list)\n",
+    "plt.semilogy(err_list1)\n",
     "plt.semilogy(err_list2)\n",
     "# set legend\n",
     "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
-    "plt.ylabel(\"L2 norm of weight error (largest singular value)\")\n",
+    "plt.ylabel(\"Nuclear norm of weight error (sum of singular values)\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
    ]
@@ -712,7 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch_size in [1, 5, 10, 20, 50]:\n",
+    "for batch_size in [1, 5, 10, 20, 50, input_size]:\n",
     "    with LogCapture() as logc:\n",
     "        atile.tile.set_weights(w.T)\n",
     "        atile.program_weights(batch_size=batch_size)\n",
@@ -722,7 +494,7 @@
     "    plt.semilogy(err_list, label=f\"batch_size={batch_size}\")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Iteration\")\n",
-    "plt.ylabel(\"L2 norm of weight error\")\n",
+    "plt.ylabel(\"Nuclear norm of weight error\")\n",
     "plt.title(\n",
     "    \"{}x{} rank={} matrix with {}\".format(\n",
     "        input_size, output_size, rank, atile.rpu_config.device.__class__.__name__\n",
@@ -762,6 +534,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from src.prog_scheme.realistic import RealisticTile, RPUConfigwithProgram\n",
+    "\n",
     "rpu_config = RPUConfigwithProgram(program_weights=program_weights_gdp)\n",
     "ctile = RealisticTile(output_size, input_size, rpu_config=rpu_config)\n",
     "\n",
