refactor: Update EqPropLinear.calc_n_set_param_grad_() calculation
The calculation in EqPropLinear.calc_n_set_param_grad_() has been updated to fix a bug. The previous calculation was incorrect and has been replaced with a corrected version.

--- a/notebooks/3.0-lhr-compare-grad-cosine-similarity.ipynb
+++ b/notebooks/3.0-lhr-compare-grad-cosine-similarity.ipynb
@@ -6,24 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instantiate a model from src\n",
-    "\n",
-    "from hydra_zen import instantiate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.nn.utils import parameters_to_vector\n",
     "\n",
-    "\n",
     "# 모델 정의\n",
+    "\n",
+    "\n",
     "class SimpleModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(SimpleModel, self).__init__()\n",
@@ -34,6 +24,8 @@
     "\n",
     "\n",
     "# 코사인 유사도 계산 함수\n",
+    "\n",
+    "\n",
     "def cosine_similarity(grads1, grads2):\n",
     "    vec1 = parameters_to_vector(grads1)\n",
     "    vec2 = parameters_to_vector(grads2)\n",
@@ -44,40 +36,61 @@
     "model1 = SimpleModel()\n",
     "model2 = SimpleModel()\n",
     "\n",
-    "# 옵티마이저 정의 (모델1에 대해서만)\n",
+    "# 옵티마이저 정의\n",
     "optimizer = optim.SGD(model1.parameters(), lr=0.01)\n",
     "optimizer2 = optim.SGD(model2.parameters(), lr=0.01)\n",
+    "\n",
     "# 임의의 데이터 생성 (10차원 입력, 1차원 출력)\n",
     "x = torch.randn(64, 10)\n",
     "y = torch.randn(64, 1)\n",
     "\n",
+    "# 그래디언트를 저장할 리스트\n",
+    "grads1 = []\n",
+    "grads2 = []\n",
+    "\n",
+    "# 훅 함수 정의\n",
+    "\n",
+    "\n",
+    "def save_grad1(grad):\n",
+    "    grads1.append(grad.clone())\n",
+    "\n",
+    "\n",
+    "def save_grad2(grad):\n",
+    "    grads2.append(grad.clone())\n",
+    "\n",
+    "\n",
+    "# 훅 등록\n",
+    "for param in model1.parameters():\n",
+    "    param.register_hook(save_grad1)\n",
+    "\n",
+    "for param in model2.parameters():\n",
+    "    param.register_hook(save_grad2)\n",
+    "\n",
+    "\n",
     "similarity_list = []\n",
     "for idx, iteration in enumerate(range(2000)):\n",
     "    optimizer.zero_grad()  # 그래디언트 초기화\n",
+    "    optimizer2.zero_grad()  # 그래디언트 초기화\n",
     "\n",
     "    # 두 모델의 예측 및 손실 계산\n",
     "    pred1 = model1(x)\n",
     "    pred2 = model2(x)\n",
     "    loss1 = (pred1 - y).pow(2).mean()\n",
     "    loss2 = (pred2 - y).pow(2).mean()\n",
-    "    (\n",
+    "    if idx % 100 == 0:\n",
     "        print(f\"Iteration {iteration}: Loss1 = {loss1.item()}, Loss2 = {loss2.item()}\")\n",
-    "        if idx % 100 == 0\n",
-    "        else None\n",
-    "    )\n",
+    "\n",
     "    # 그래디언트 계산\n",
     "    loss1.backward()\n",
     "    loss2.backward()\n",
     "\n",
     "    # 그래디언트 코사인 유사도 계산\n",
-    "    grads1 = [p.grad.detach().clone() for p in model1.parameters()]\n",
-    "    grads2 = [p.grad for p in model2.parameters()]\n",
     "    similarity_list.append(cosine_similarity(grads1, grads2))\n",
-    "    # print(f\"Iteration {iteration}: Cosine Similarity = {similarity.item()}\")\n",
+    "    grads1.clear()\n",
+    "    grads2.clear()\n",
+    "\n",
     "    # 모델1의 파라미터 업데이트\n",
     "    optimizer.step()\n",
-    "    for p, grad in zip(model2.parameters(), grads1):\n",
-    "        p.grad = grad\n",
     "    optimizer2.step()"
    ]
   },
@@ -121,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
